core/tests/rust/snapshots/integration_tests__rust__analyze_code_basic.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "test.rs",
  "line_metrics": [
    {
      "line_number": 1,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0
    },
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.5,
      "depth": 1,
      "transitive_dependencies": 1
    }
  ],
  "overall_complexity_score": 2.25
}
