core/tests/rust/snapshots/integration_tests__rust__associated_function_and_ufcs_metrics.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/associated_function_and_ufcs.rs",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.08,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.12,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 5,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.16,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 15,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.08,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        13
      ]
    },
    {
      "line_number": 22,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.72,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        4
      ]
    },
    {
      "line_number": 23,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.28,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        16
      ]
    },
    {
      "line_number": 24,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.32,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        16
      ]
    }
  ],
  "overall_complexity_score": 16.776
}
