core/tests/rust/snapshots/integration_tests__rust__basic_ir.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/basic_rust_code.rs",
  "definitions": [
    {
      "name": "a",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": null
    },
    {
      "name": "b",
      "line_number": 2,
      "definition_type": "VariableDefinition",
      "scope": null
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "a",
      "dependency_type": "VariableUse",
      "context": "binary_expression"
    }
  ],
  "analysis_metadata": {
    "language": "Rust",
    "total_lines": 2,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
