core/tests/rust/snapshots/integration_tests__rust__closure_dependency_ir.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/closure_dependency.rs",
  "definitions": [
    {
      "name": "main",
      "line_number": 1,
      "definition_type": "FunctionDefinition",
      "scope": "main"
    },
    {
      "name": "add_one",
      "line_number": 2,
      "definition_type": "VariableDefinition",
      "scope": "main"
    },
    {
      "name": "x",
      "line_number": 2,
      "definition_type": "VariableDefinition",
      "scope": "main"
    },
    {
      "name": "y",
      "line_number": 5,
      "definition_type": "VariableDefinition",
      "scope": "main"
    }
  ],
  "dependencies": [
    {
      "source_line": 3,
      "target_line": 2,
      "symbol": "x",
      "dependency_type": "VariableUse",
      "context": "binary_expression"
    },
    {
      "source_line": 6,
      "target_line": 2,
      "symbol": "add_one",
      "dependency_type": "FunctionCall",
      "context": "call_expression"
    },
    {
      "source_line": 6,
      "target_line": 5,
      "symbol": "y",
      "dependency_type": "VariableUse",
      "context": "arguments"
    },
    {
      "source_line": 6,
      "target_line": 2,
      "symbol": "add_one",
      "dependency_type": "FunctionCall",
      "context": "call_expression"
    },
    {
      "source_line": 6,
      "target_line": 5,
      "symbol": "y",
      "dependency_type": "VariableUse",
      "context": "arguments"
    }
  ],
  "usage": [
    {
      "name": "main",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 1,
      "start_column": 4,
      "end_line": 1,
      "end_column": 8
    },
    {
      "name": "add_one",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 2,
      "start_column": 9,
      "end_line": 2,
      "end_column": 16
    },
    {
      "name": "x",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 2,
      "start_column": 20,
      "end_line": 2,
      "end_column": 21
    },
    {
      "name": "x",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 3,
      "start_column": 9,
      "end_line": 3,
      "end_column": 10
    },
    {
      "name": "y",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 5,
      "start_column": 9,
      "end_line": 5,
      "end_column": 10
    },
    {
      "name": "add_one(y)",
      "kind": "CallExpression",
      "scope": "main",
      "start_line": 6,
      "start_column": 5,
      "end_line": 6,
      "end_column": 15
    },
    {
      "name": "add_one",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 6,
      "start_column": 5,
      "end_line": 6,
      "end_column": 12
    },
    {
      "name": "y",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 6,
      "start_column": 13,
      "end_line": 6,
      "end_column": 14
    }
  ],
  "analysis_metadata": {
    "language": "Rust",
    "total_lines": 7,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
