core/tests/rust/snapshots/integration_tests__rust__closure_dependency_metrics.snap
---
source: core/tests/rust/mod.rs
assertion_line: 73
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/closure_dependency.rs",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.14285714285714285,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 6,
      "total_dependencies": 4,
      "dependency_distance_cost": 1.4285714285714284,
      "depth": 1,
      "transitive_dependencies": 2,
      "dependent_lines": [
        5,
        2,
        5,
        2
      ]
    }
  ],
  "overall_complexity_score": 7.757142857142858
}
