core/tests/rust/snapshots/integration_tests__rust__function_call_dependency_ir.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/function_call_dependency.rs",
  "definitions": [
    {
      "name": "add",
      "line_number": 1,
      "definition_type": "FunctionDefinition",
      "scope": "add"
    },
    {
      "name": "a",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": "add"
    },
    {
      "name": "b",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": "add"
    },
    {
      "name": "main",
      "line_number": 4,
      "definition_type": "FunctionDefinition",
      "scope": "main"
    },
    {
      "name": "x",
      "line_number": 5,
      "definition_type": "VariableDefinition",
      "scope": "main"
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "a",
      "dependency_type": "VariableUse",
      "context": "binary_expression"
    },
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "b",
      "dependency_type": "VariableUse",
      "context": "binary_expression"
    }
  ],
  "usage": [
    {
      "name": "add",
      "kind": "Identifier",
      "scope": "add",
      "start_line": 1,
      "start_column": 4,
      "end_line": 1,
      "end_column": 7
    },
    {
      "name": "a",
      "kind": "Identifier",
      "scope": "add",
      "start_line": 1,
      "start_column": 8,
      "end_line": 1,
      "end_column": 9
    },
    {
      "name": "b",
      "kind": "Identifier",
      "scope": "add",
      "start_line": 1,
      "start_column": 16,
      "end_line": 1,
      "end_column": 17
    },
    {
      "name": "a",
      "kind": "Identifier",
      "scope": "add",
      "start_line": 2,
      "start_column": 5,
      "end_line": 2,
      "end_column": 6
    },
    {
      "name": "b",
      "kind": "Identifier",
      "scope": "add",
      "start_line": 2,
      "start_column": 9,
      "end_line": 2,
      "end_column": 10
    },
    {
      "name": "main",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 4,
      "start_column": 4,
      "end_line": 4,
      "end_column": 8
    },
    {
      "name": "x",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 5,
      "start_column": 9,
      "end_line": 5,
      "end_column": 10
    },
    {
      "name": "add(1, 2)",
      "kind": "CallExpression",
      "scope": "main",
      "start_line": 5,
      "start_column": 13,
      "end_line": 5,
      "end_column": 22
    },
    {
      "name": "add",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 5,
      "start_column": 13,
      "end_line": 5,
      "end_column": 16
    }
  ],
  "analysis_metadata": {
    "language": "Rust",
    "total_lines": 6,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
