core/tests/rust/snapshots/integration_tests__rust__method_call_dependency_ir.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/method_call_dependency.rs",
  "definitions": [
    {
      "name": "MyStruct",
      "line_number": 1,
      "definition_type": "StructDefinition",
      "scope": "MyStruct"
    },
    {
      "name": "my_method",
      "line_number": 6,
      "definition_type": "FunctionDefinition",
      "scope": "MyStruct.my_method"
    },
    {
      "name": "main",
      "line_number": 11,
      "definition_type": "FunctionDefinition",
      "scope": "main"
    },
    {
      "name": "s",
      "line_number": 12,
      "definition_type": "VariableDefinition",
      "scope": "main"
    }
  ],
  "dependencies": [
    {
      "source_line": 13,
      "target_line": 6,
      "symbol": "my_method",
      "dependency_type": "FunctionCall",
      "context": "call_expression"
    },
    {
      "source_line": 13,
      "target_line": 12,
      "symbol": "s",
      "dependency_type": "VariableUse",
      "context": "field_expression"
    }
  ],
  "usage": [
    {
      "name": "my_method",
      "kind": "Identifier",
      "scope": "MyStruct.my_method",
      "start_line": 6,
      "start_column": 8,
      "end_line": 6,
      "end_column": 17
    },
    {
      "name": "self.value",
      "kind": "FieldExpression",
      "scope": "MyStruct.my_method",
      "start_line": 7,
      "start_column": 9,
      "end_line": 7,
      "end_column": 19
    },
    {
      "name": "main",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 11,
      "start_column": 4,
      "end_line": 11,
      "end_column": 8
    },
    {
      "name": "s",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 12,
      "start_column": 9,
      "end_line": 12,
      "end_column": 10
    },
    {
      "name": "MyStruct { value: 10 }",
      "kind": "StructExpression",
      "scope": "main",
      "start_line": 12,
      "start_column": 13,
      "end_line": 12,
      "end_column": 35
    },
    {
      "name": "s.my_method()",
      "kind": "CallExpression",
      "scope": "main",
      "start_line": 13,
      "start_column": 5,
      "end_line": 13,
      "end_column": 18
    },
    {
      "name": "s.my_method",
      "kind": "FieldExpression",
      "scope": "main",
      "start_line": 13,
      "start_column": 5,
      "end_line": 13,
      "end_column": 16
    },
    {
      "name": "s",
      "kind": "Identifier",
      "scope": "main",
      "start_line": 13,
      "start_column": 5,
      "end_line": 13,
      "end_column": 6
    }
  ],
  "analysis_metadata": {
    "language": "Rust",
    "total_lines": 14,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
